test syntax-check workflow

--- a/.github/workflows/_tests.yml
+++ b/.github/workflows/_tests.yml
@@ -10,3 +10,22 @@ jobs:
       - name: Check for missing includes in LibCustomIcons.addon
         run: |
           python3 .github/scripts/tests/check-includes.py .
+  syntax-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Check for syntax errors in Lua files
+        run: |
+          URL=$(curl -s https://api.github.com/repos/EmmyLuaLs/emmylua-analyzer-rust/releases/latest | jq -r '.assets[] | select(.name? | match("emmylua_check-linux-x64.tar.gz$")) | .browser_download_url')
+          if [ -n "$URL" ]; then
+            curl -L "$URL" -o emmylua_check-linux-x64.tar.gz
+          else
+            echo "::error:: ❌ File not found in latest release."
+            exit 1
+          fi
+
+          tar -xzf emmylua_check-linux-x64.tar.gz
+          chmod +x emmylua_check
+
+          ./emmylua_check . --verbose
