fix syntax-check workflow

--- a/.github/workflows/_generate-docs.yml
+++ b/.github/workflows/_generate-docs.yml
@@ -21,7 +21,7 @@ jobs:
           fi
           
           tar -xzf emmylua_doc_cli-linux-x64.tar.gz
-          chmod +x emmylua_doc_cli-linux-x64.tar.gz
+          chmod +x emmylua_doc_cli
 
           ./emmylua_doc_cli --output ./docs-md ./docs-lua
       - name: Deploy docs
