--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -146,3 +146,13 @@ jobs:
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME }}
           changelog_file: 'CHANGELOG.md'
+
+#      - name: Upload to BNET
+#        uses: m00nyONE/bnet-upload@v1
+#        with:
+#          BNET_USERNAME: ${{ secrets.BNET_USERNAME }}
+#          BNET_PASSWORD: ${{ secrets.BNET_PASSWORD }}
+#          addon_id: '---'
+#          version: ${{ env.ADDON_VERSION }}
+#          zip_file: ${{ env.ZIP_FULL_NAME }}
+#          release_notes_file: 'latest_changes.md'
