--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: get repo name
+        run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
+
       - name: Get current year, month and day
         run: |
           echo "BUILD_DATE_YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
@@ -33,7 +36,7 @@ jobs:
 
       - name: Create env variables
         run: |
-          addon_name="LibCustomNames"
+          addon_name="${{ env.REPO_NAME }}"
           version="${{ env.BUILD_DATE_WITH_HYPHEN }}-dev"
           
           echo "ADDON_NAME=$addon_name" >> $GITHUB_ENV
@@ -102,5 +105,5 @@ jobs:
 #          addon_id: '---'
 #          version: ${{ env.ADDON_VERSION }}
 #          zip_file: ${{ env.ZIP_FULL_NAME }}
-#          release_notes_file: 'latest_changes.md'
+#          release_notes_file: latest_changes.md
 #          publish: false
