--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -54,8 +54,8 @@ jobs:
       - name: Create ZIP archive
         run: |
           REPO_FOLDER=$(pwd)
-          TMP_FOLDER_PC="/tmp/${{ env.ADDON_NAME }}_PC"
-          TMP_FOLDER_CONSOLE="/tmp/${{ env.ADDON_NAME }}_CONSOLE"
+          TMP_FOLDER_PC="/tmp/pc/${{ env.ADDON_NAME }}"
+          TMP_FOLDER_CONSOLE="/tmp/console/${{ env.ADDON_NAME }}"
           
           # Define the path to the ignore pattern file
           ignore_file=".build-ignore"
@@ -72,10 +72,10 @@ jobs:
           rsync -a --quiet $exclude_patterns --exclude "PC" "$REPO_FOLDER/" "$TMP_FOLDER_CONSOLE/"
           
            # create zip for PC
-          (cd /tmp && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_PC }}" "${{ env.ADDON_NAME }}_PC")
+          (cd /tmp/pc && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_PC }}" "${{ env.ADDON_NAME }}")
           
           # create zip for Console
-          (cd /tmp && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_CONSOLE }}" "${{ env.ADDON_NAME }}_CONSOLE")
+          (cd /tmp/console && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_CONSOLE }}" "${{ env.ADDON_NAME }}")
 
       - name: Extract latest changelog entry
         run: |
