--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -106,13 +106,13 @@ jobs:
           changelog_file: 'CHANGELOG.md'
           test: true
 
-#      - name: Upload to BNET (no publish)
-#        uses: m00nyONE/bnet-upload@v1
-#        with:
-#          BNET_USERNAME: ${{ secrets.BNET_USERNAME }}
-#          BNET_PASSWORD: ${{ secrets.BNET_PASSWORD }}
-#          addon_id: '---'
-#          version: ${{ env.ADDON_VERSION }}
-#          zip_file: ${{ env.ZIP_FULL_NAME_CONSOLE }}
-#          release_notes_file: latest_changes.md
-#          publish: false
+      - name: Upload to BNET (no publish)
+        uses: m00nyONE/bnet-upload@v1
+        with:
+          BNET_USERNAME: ${{ secrets.BNET_USERNAME }}
+          BNET_PASSWORD: ${{ secrets.BNET_PASSWORD }}
+          addon_id: "5eaa0d91-47f8-4c5e-8673-db3ab518a752"
+          version: ${{ env.ADDON_VERSION }}
+          zip_file: ${{ env.ZIP_FULL_NAME_CONSOLE }}
+          release_notes_file: latest_changes.md
+          publish: false
