--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -107,7 +107,7 @@ jobs:
           test: true
 
       - name: Upload to BNET (no publish)
-        uses: m00nyONE/bnet-upload@v1
+        uses: m00nyONE/bnet-upload@main
         with:
           BNET_USERNAME: ${{ secrets.BNET_USERNAME }}
           BNET_PASSWORD: ${{ secrets.BNET_PASSWORD }}
