--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: ESOUI Release
+name: Release
 
 on:
   workflow_dispatch:
@@ -8,25 +8,19 @@ on:
 
 jobs:
   test:
-    if: github.repository_owner == 'm00nyONE'
     uses: ./.github/workflows/_tests.yml
-  test-pc:
-    if: github.repository_owner == 'm00nyONE'
-    uses: ./.github/workflows/_tests_pc.yml
-  test-console:
-    if: github.repository_owner == 'm00nyONE'
-    uses: ./.github/workflows/_tests_console.yml
+
   docs:
     if: github.repository_owner == 'm00nyONE'
     uses: ./.github/workflows/_generate-docs.yml
     permissions:
       contents: write
+
   release:
-    if: github.repository_owner == 'm00nyONE'
     name: "release"
     runs-on: ubuntu-latest
     permissions: write-all
-    needs: [ 'test', 'test-pc', 'test-console' ]
+    needs: [ 'test' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -39,94 +33,99 @@ jobs:
           echo "🔍 Checking for changes since the last release..."
           REPO="$GITHUB_REPOSITORY"
           LAST_RELEASE_TAG=$(gh api repos/${GITHUB_REPOSITORY}/releases/latest --jq .tag_name || echo "")
-          
+
           if [ -z "$LAST_RELEASE_TAG" ] || [ "$LAST_RELEASE_TAG" = "null" ]; then
             echo "⚠️ No previous release found, proceeding with release."
-            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "should_release=true" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-      
+
           echo "Last release tag: $LAST_RELEASE_TAG"
-          
+
           git fetch --quiet --tags
           CHANGED=$(git diff --name-only "$LAST_RELEASE_TAG" HEAD | grep -E '\.(lua|txt|md|xml|addon|dds)$' || true)
-          
+
           if [ -z "$CHANGED" ]; then
             echo "✅ No relevant file changes since $LAST_RELEASE_TAG."
-            echo "should_release=false" >> $GITHUB_OUTPUT
+            echo "should_release=false" >> "$GITHUB_OUTPUT"
           else
             echo "✅ Changes detected:"
             echo "$CHANGED"
-            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "should_release=true" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: get repo name
-        run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
+      - name: Get repo name
+        run: echo "REPO_NAME=${{ github.event.repository.name }}" >> "$GITHUB_ENV"
 
       - name: Get current year, month and day
-        if: steps.check_changes.outputs.should_release == 'true'
         run: |
-          echo "BUILD_DATE_YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
-          echo "BUILD_DATE_MONTH=$(date -u +'%m')" >> $GITHUB_ENV
-          echo "BUILD_DATE_DAY=$(date -u +'%d')" >> $GITHUB_ENV
-          echo "BUILD_DATE_NUMBER=$(date +'%Y%m%d')" >> $GITHUB_ENV
-          echo "BUILD_DATE_WITH_DOT=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
-          echo "BUILD_DATE_WITH_HYPHEN=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "BUILD_DATE_YEAR=$(date -u +'%Y')" >> "$GITHUB_ENV"
+          echo "BUILD_DATE_MONTH=$(date -u +'%m')" >> "$GITHUB_ENV"
+          echo "BUILD_DATE_DAY=$(date -u +'%d')" >> "$GITHUB_ENV"
+          echo "BUILD_DATE_NUMBER=$(date +'%Y%m%d')" >> "$GITHUB_ENV"
+          echo "BUILD_DATE_WITH_DOT=$(date +'%Y.%m.%d')" >> "$GITHUB_ENV"
+          echo "BUILD_DATE_WITH_HYPHEN=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
 
       - name: Create env variables
-        if: steps.check_changes.outputs.should_release == 'true'
         run: |
           addon_name="${{ env.REPO_NAME }}"
           version="${{ env.BUILD_DATE_WITH_HYPHEN }}"
 
-          echo "ADDON_NAME=$addon_name" >> $GITHUB_ENV
-          echo "ADDON_VERSION=$version" >> $GITHUB_ENV
-          
-          echo "ZIP_FULL_NAME_PC=${addon_name}-${version}-pc.zip" >> $GITHUB_ENV
-          echo "ZIP_FULL_NAME_CONSOLE=${addon_name}-${version}-console.zip" >> $GITHUB_ENV
+          echo "ADDON_NAME=$addon_name" >> "$GITHUB_ENV"
+          echo "ADDON_VERSION=$version" >> "$GITHUB_ENV"
+
+          echo "ZIP_FULL_NAME_PC=${addon_name}-${version}-pc.zip" >> "$GITHUB_ENV"
+          echo "ZIP_FULL_NAME_CONSOLE=${addon_name}-${version}-console.zip" >> "$GITHUB_ENV"
 
       - name: Replace placeholders with current date
-        if: steps.check_changes.outputs.should_release == 'true'
         run: |
           sed -i "s/version = \"dev\"/version = \"${{ env.ADDON_VERSION }}\"/g" ${{ env.ADDON_NAME }}.lua
           sed -i "s/## Version: dev/## Version: ${{ env.ADDON_VERSION }}/g" ${{ env.ADDON_NAME }}.addon
           sed -i "s/## AddOnVersion: 99999999/## AddOnVersion: ${{ env.BUILD_DATE_NUMBER }}/g" ${{ env.ADDON_NAME }}.addon
 
       - name: Create ZIP archive
-        if: steps.check_changes.outputs.should_release == 'true'
         run: |
           REPO_FOLDER=$(pwd)
           TMP_FOLDER_PC="/tmp/pc/${{ env.ADDON_NAME }}"
           TMP_FOLDER_CONSOLE="/tmp/console/${{ env.ADDON_NAME }}"
-          
+
           # Define the path to the ignore pattern file
           ignore_file=".build-ignore"
-          
+
           # Read and process ignore patterns into a single line
           exclude_patterns=$(cat "$ignore_file" | awk '{print "--exclude " $0}' | tr '\n' ' ')
-          
+
           # Make folder and copy content for PC
           mkdir -p $TMP_FOLDER_PC
           rsync -a --quiet $exclude_patterns --exclude "Console" "$REPO_FOLDER/" "$TMP_FOLDER_PC/"
-          
+
           # Make folder and copy content for Console
           mkdir -p $TMP_FOLDER_CONSOLE
           rsync -a --quiet $exclude_patterns --exclude "PC" "$REPO_FOLDER/" "$TMP_FOLDER_CONSOLE/"
-          
+
            # create zip for PC
           (cd /tmp/pc && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_PC }}" "${{ env.ADDON_NAME }}")
-          
+
           # create zip for Console
           (cd /tmp/console && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME_CONSOLE }}" "${{ env.ADDON_NAME }}")
 
       - name: Extract latest changelog entry
-        if: steps.check_changes.outputs.should_release == 'true'
         run: |
           awk '/^## / { if (!found) { found=1; print; next } else { exit } } found' CHANGELOG.md > latest_changes.md
           cat latest_changes.md
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: releases
+          path: |
+            ${{ env.ZIP_FULL_NAME_PC }}
+            ${{ env.ZIP_FULL_NAME_CONSOLE }}
+            latest_changes.md
+          retention-days: 7
+
       - name: Create GitHub Release
-        if: steps.check_changes.outputs.should_release == 'true'
+        if: ${{ steps.check_changes.outputs.should_release == 'true' }}
         uses: ncipollo/release-action@v1
         with:
           name: "${{ env.ADDON_VERSION }}"
@@ -138,34 +137,52 @@ jobs:
           allowUpdates: true
           makeLatest: true
 
-      - name: Test Upload to ESOUI
+      - name: Check ESOUI secrets
+        if: ${{ steps.check_changes.outputs.should_release == 'true' }}
+        id: check_eso_secrets
+        run: |
+          if [ -z "${{ secrets.ESOUI_ADDON_ID }}" ] || \
+             [ -z "${{ secrets.ESOUI_API_KEY }}" ];
+          then
+            echo "::warning::⚠️ ESOUI secrets are not set. Skip upload."
+            echo "valid=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "ESOUI secrets are set"
+            echo "valid=true" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Upload [PC] version to ESOUI
         uses: m00nyONE/esoui-upload@main
-        if: steps.check_changes.outputs.should_release == 'true'
+        if: ${{ steps.check_eso_secrets.outputs.valid == 'true' }}
         with:
+          addon_id:  ${{ secrets.ESOUI_ADDON_ID }}
           api_key: ${{ secrets.ESOUI_API_KEY }}
-          addon_id: '4155'
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME_PC }}
           changelog_file: 'CHANGELOG.md'
-          test: true
 
-      - name: Upload to ESOUI
-        uses: m00nyONE/esoui-upload@main
-        if: steps.check_changes.outputs.should_release == 'true'
-        with:
-          api_key: ${{ secrets.ESOUI_API_KEY }}
-          addon_id: '4155'
-          version: ${{ env.ADDON_VERSION }}
-          zip_file: ${{ env.ZIP_FULL_NAME_PC }}
-          changelog_file: 'CHANGELOG.md'
+      - name: Check BNET secrets
+        if: ${{ steps.check_changes.outputs.should_release == 'true' }}
+        id: check_bnet_secrets
+        run: |
+          if [ -z "${{ secrets.BNET_ADDON_UUID }}" ] || \
+             [ -z "${{ secrets.BNET_USERNAME }}" ] || \
+             [ -z "${{ secrets.BNET_PASSWORD }}" ];
+          then
+            echo "::warning::⚠️ BNET secrets are not set. Skip upload."
+            echo "valid=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "BNET secrets are set"
+            echo "valid=true" >> "$GITHUB_OUTPUT"
+          fi
 
-      - name: Upload to BNET
+      - name: Upload [Console] version to BNET
         uses: m00nyONE/bnet-upload@main
-        if: steps.check_changes.outputs.should_release == 'true'
+        if: ${{ steps.check_bnet_secrets.outputs.valid == 'true' }}
         with:
+          addon_id: ${{ secrets.BNET_ADDON_UUID }}
           BNET_USERNAME: ${{ secrets.BNET_USERNAME }}
           BNET_PASSWORD: ${{ secrets.BNET_PASSWORD }}
-          addon_id: "5eaa0d91-47f8-4c5e-8673-db3ab518a752"
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME_CONSOLE }}
           release_notes_file: latest_changes.md
