--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
     name: "release"
     runs-on: ubuntu-latest
     permissions: write-all
-    needs: [ 'test' ]
+    needs: [ 'test', 'test-pc', 'test-console' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
