--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   test-general:
-    uses: ./.github/workflows/_tests_general.yml
+    uses: _tests-general.yml
   test-pc:
-    uses: ./.github/workflows/_tests_platform.yml
+    uses: _tests-platform.yml
     with:
       NAMES_PATH: PC/names
   test-console:
-    uses: ./.github/workflows/_tests_platform.yml
+    uses: _tests-platform.yml
     with:
       NAMES_PATH: Console/names
